[package]
name = "uds_client_lite_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt", "time", "sync", "io-util", "net"] }
clap = "4.5.0"
colored = "2.0"
glob = "0.3"
aes-gcm = "0.10.3"
rsa = "0.9.6"
rand = "0.8"
sha2 = "0.10"
pem = "3.0.2"
regex-lite = "0.1.5"

[profile.dev]
opt-level = 0

[profile.release]
# opt-level = 3 # performance
opt-level = "z" # size
lto = true
codegen-units = 1
strip = true

# [[bin]]
# name = "uds_client_lite_rust"
# path = "src/main.rs"